# stockboard-backend

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
src/stockboard/: exceptions.py  main.py
src/stockboard/data/: exceptions.py  models.py  router.py  schemas.py  service.py  types.py
src/stockboard/stocks/: exceptions.py  models.py  router.py  service.py
stockboard/: main.py
