[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "stockboard"
version = "0.1.0"
description = "API for StockBoard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi>=0.135.1", "uvicorn>=0.41.0", "yfinance>=1.2.0"]

[dependency-groups]
dev = ["ruff>=0.15.5", "ty>=0.0.21"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[project.scripts]
start = "stockboard.main:main"
